[gd_scene load_steps=4 format=3 uid="uid://dnm6uvg617a21"]

[ext_resource type="Script" path="res://crosant.gd" id="1_wbrhn"]
[ext_resource type="Texture2D" uid="uid://bjgvv2g78p83v" path="res://crosant.jpg" id="2_1dvls"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hjv6x"]
size = Vector2(67, 69)

[node name="crosant" type="Node2D"]
script = ExtResource("1_wbrhn")

[node name="Sprite2D" type="Sprite2D" parent="." groups=["product"]]
position = Vector2(0.013288, 0.00838299)
rotation = 0.008407
scale = Vector2(0.414797, 0.481028)
texture = ExtResource("2_1dvls")

[node name="Area 2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area 2D"]
shape = SubResource("RectangleShape2D_hjv6x")

[connection signal="body_entered" from="Area 2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area 2D" to="." method="_on_area_2d_body_exited"]
[connection signal="mouse_entered" from="Area 2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area 2D" to="." method="_on_area_2d_mouse_exited"]
